src/global_class_modifications.scss
// Modifies all Formly/Angular forms
.form-label{
  font-weight: bold;
}


// Adds new custom "updated" class to formly
.updated{
  background: repeating-linear-gradient(
      45deg, 
      hsl(210, 23%, 20%), 
      hsl(210, 23%, 20%) 10px, 
      hsl(210, 23%, 25%) 10px, 
      hsl(210, 23%, 25%) 20px,
  );
  
  border-radius: var(--bs-border-radius);
}

a{
  text-decoration: dotted;
}

